# reversi

./: Cargo.toml  LICENSE  README.md
benches/: misc.rs  mod.rs  test_ai.rs
src/: board.rs  game.rs  lib.rs  turn.rs
src/reversi_test/: mod.rs  test_ai.rs
src/revtest/: mod.rs
tests/: misc.rs  mod.rs
