[package]
name = "reversi"
version = "0.4.0"
authors = ["Enrico Ghiorzi <enrico.ghiorzi@gmail.com>"]
description = "General-purpose Reversi library, written in Rust for speed and efficency. Originally written for RUSThello (https://github.com/EGhiorzi/rusthello)."
repository = "https://github.com/EGhiorzi/reversi"
license = "MIT"
keywords = ["reversi", "othello", "rusthello"]

[dependencies]
clippy = {version = "*", optional = true}
rand = "0.3.*"
