[package]
name = "reversi"
version = "0.5.0"
authors = ["Enrico Ghiorzi <enrico.ghiorzi@gmail.com>"]
description = "General-purpose Reversi library, written in Rust for speed and efficency. Originally written for RUSThello (https://github.com/EGhiorzi/rusthello)."
repository = "https://github.com/EGhiorzi/reversi"
license = "MIT"
keywords = ["reversi", "othello", "rusthello"]

[dependencies]
clippy = {version = "*", optional = true}
rand = "0.3.*"

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

# The benchmarking profile, used for `cargo bench`.
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
